# chess-solver

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  dev.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/issues/: issue1.md
docs/user-guide/: installation.md
src/codex_template/: __init__.py  main.py
src/codex_template/core/: __init__.py  config.py  exceptions.py  utils.py
tests/: conftest.py
tests/unit/: test_config.py  test_main.py
